# VLA-Arena

./: .gitignore  README.md  README_zh.md  conversion_requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: README_EN.md  README_ZH.md  data_collection.md  data_collection_zh.md  evaluation.md  evaluation_zh.md  finetune.md  finetune_openpi.sh  finetune_openvla.sh  finetune_openvla_oft.sh  finetune_univla.sh  finetune_zh.md  finetuning_and_evaluation.md  finetuning_and_evaluation_zh.md  scene_construction.md  scene_construction_zh.md
rlds_dataset_builder/: environment_ubuntu.yml  test_dataset_transform.py
rlds_dataset_builder/VLA_Arena/: VLA_Arena_dataset_builder.py  conversion_utils.py
scripts/: check_dataset_integrity.py  collect_demonstration.py  config_copy.py  convert.sh  convert_data_to_lerobot.py  convert_data_to_lerobot_openpi.py  convert_data_to_lerobot_smolvla.py  create_dataset.py  create_task_example.py  create_template.py  download_lerobot_openpi_dataset.py  evaluate_policy.py  evaluate_policy.sh  get_affordance_info.py  get_dataset_info.py  group_create_dataset.py  init_file_create.py  inspect_hdf5.py  map_tasks.py  prepare_lerobot_openpi_visualizer.py  random_sample_hdf5.py  regenerate_dataset.py  replace_prismatic_imports.py  visualize_bddl.py
tests/: README.md  TROUBLESHOOTING.md  __init__.py  conftest.py  test_bddl_utils.py  test_benchmark.py  test_cli.py  test_task_generation_utils.py  test_utils.py  test_vla_arena_init.py
vla_arena/cli/: eval.py  main.py  train.py
vla_arena/evaluation/: openvla_utils.py  utils.py
(+896 files in other folders)
